Looks prettier now.

--- a/Index.html
+++ b/Index.html
@@ -7,15 +7,20 @@
     <title>How Many Balloons do you need to lift your house like in the movie up?</title>
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
+
     <link href="https://fonts.googleapis.com/css2?family=Pattaya&family=Roboto:wght@300&display=swap" rel="stylesheet">
+
+    <link rel="shortcut icon" href="favicon.ico" />
 
     <link rel="stylesheet" href="Style.css">
 
 </head>
 <body>
     <div class="title">
-        How Many Balloons do you need to lift your house like in the movie up?
+        How Many Balloons do you need to lift your house like in the movie Up?
     </div>
+
+    <img src="movieimage.jpg" class="image">
 
     <label class="paragraphTitle" for="gasSelector">Wich gas do you wnat to fill the balloons with?</label>
     <br>
@@ -25,12 +30,16 @@
     </select>
 
     <div class="paragraphTitle">
-        Lorem Ipsum 
+        The lift of a single balloon 
     </div>
     
     <div class="paraghraph">
-        Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum 
+        Although helium weighs twice as much hydrogen, because each gas is so much lighter than air helium provides about 93% of hydrogen's lift at full purity. In practical operation it is impossible to achieve or maintain 100% purity of either gas, reducing helium's lifting ability to about 88% of the lift of hydrogen.
     </div>
+
+    <a class="paragraph" href="https://www.airships.net/helium-hydrogen-airships/#:~:text=Although%20helium%20weighs%20twice%20as,of%20the%20lift%20of%20hydrogen.">
+        According to airships.net.
+    </a>
 
     <br>
 
@@ -39,7 +48,7 @@
     <input class="input" type="number" id="inputSquareMeters">
 
     <div class="paragraphTitle">
-        Lorem Ipsum 
+        The weight of a house
     </div>
     
     <div class="paraghraph">
