--- a/Index.html
+++ b/Index.html
@@ -22,7 +22,7 @@
 
     <img src="movieimage.jpg" class="image">
 
-    <label class="paragraphTitle" for="gasSelector">Wich gas do you wnat to fill the balloons with?</label>
+    <label class="paragraphTitle" for="gasSelector">Wich gas do you want to fill the balloons with?</label>
     <br>
     <select class="input" name="gasSelector" id="gasSelector">
         <option>Helium</option>
